<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoarSP</string>
    <string name="action_settings">Settings</string>
    <string name="version">Beta</string>
	<string name="aboutMe">Aplicação desenvolvida como trabalho de graduação do curso de Sistemas de Informação da Universidade São Judas Tadeu. Disponibilizado gratuitamente para uso com o intuito de ajudar as pessoas.\n\nPossivelmente se houver adesão a ferramenta adicionaremos novas cidades de acordo com a demanda e tempo.</string>
	<string name="signature">Bruno Dias Silva\nGustavo Palazolo Eiras\nRafael Casadei\nRafael Caldas\nRicardo Silvino\n\nOrientador: Prof. Dr. Pier Marco Ricchetti</string>
	<string name="signature1">Grupo:</string>	
    <string name="configuracao">Alterar Dados</string>
    <string name="tipo_sanguineo">Tipo Sanguineo</string>
    <string name="nome">Nome</string>
    <string name="tpSanguineo">Tipo Sanguineo</string>
    <string name="email">Email</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="notificacoes_push">Notificações Push</string>
    <string name="notificacoes_email">Notificações E-Mail</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="dedicatoria"></string>
    <string name="principalapto">Apto a doar</string>
    <string name="google_play_services_version">4323000</string>   
    <string name="menuAbout">Sobre</string> 
    <string name="menuSair">Sair</string>    
    <string name="ultimasolicitacoes">Solicitações abertas</string> 
    <string name="Alterartitulo">Alterar dados</string>   
    <string name="username">Nome de usuário</string>   
    <string name="alterarsenha">Senha</string>   
    <string name="alterarsenha2">Confirmar senha</string>    
    <string name="nomepaciente">Nome do paciente</string>   
    <string name="solicitacaohemocentro">Selecione um hemocentro para doação</string>   
    <string name="solicitacaocomentario">Use o espaço abaixo para agradecer os doadores :)</string>   
    <string name="buscarlistahemocentrostv">Selecione um dos hemocentros abaixo</string>   
    <string name="buscarlistasolicitacoesstv">Ajude a salvar uma vida :)</string>   
    <string name="buscardoacoespendentestv">Selecione uma doação para fazer o checkin</string> 
    <string name="muraltv">Você ainda não efetuou nenhuma doação :(</string>
    <string name="rankingtv">Ainda não há nenhum campeão :(</string>   
    <string name="doacoespendentestv">Você ainda não criou nenhuma doação  :(</string>   
    <string name="informacoesUSJT">Universidade São Judas Tadeu\n4ASIN - 2014\nSI13M</string>   
    
<string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Principal</item>
        <item >Buscar Doação</item>
        <item >Abrir Solicitação</item>
        <item >Doações Pendentes</item>
        <item >Mural</item>
        <!-- <item >Postos de Doação</item> -->
        <!-- <item >Informações</item> -->
        <item >Alterar Dados</item>     
        <item>Ranking</item>
        
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_principal</item>
        <item>@drawable/ic_buscar</item>
        <item>@drawable/ic_abrir</item>
        <item>@drawable/ic_mural</item>
        <item>@drawable/ic_mural</item>
        <!-- <item>@drawable/ic_postos</item> -->
        <!-- <item>@drawable/ic_info</item> -->
        <item>@drawable/ic_alterar</item>
        <item>@drawable/ic_ranking</item>
        
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <string-array name="tipos_Sanguineos">
        <item>A</item>
        <item>A-</item>
        <item>B</item>
        <item>B-</item>
        <item>AB</item>
        <item>AB-</item>
        <item>O</item>
        <item>O-</item>
    </string-array>
    
       <string-array name="quant_doaco">
        <item>01</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    
    <string name="alterardadostitulo">Dados Pessoais</string>
    <string name="mensagemLogin">Seja bem-vindo ao DoarSP!</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Ainda não possui cadastro?</string>
    <string name="cadastroLink">Registre-se agora!</string>
    <string name="registrartitulo">Registre-se e ajude a salvar vidas</string>
    <string name="registrarsenha">Senha</string>
    <string name="registrarsenha2">Confirme sua senha</string>
    <string name="loginerro">Login e/ou senha incorreta</string>
    <!--  Tela de BuscarDoacoes -->
   	<string name="bd_feed">Solicitações</string>
   	<string name="bd_mapa">Mapa</string>
   	<string name="filtro">Filtro</string>
   	<string name="quantSolicitacao0">Que ótimo! Não existe solicitações. :)</string>
   	<string name="quantSolicitacao1">Apenas uma solicitação.</string>
   	<string name="quantSolicitacaoN">Qtd. de Solicitações:</string>
   	<string name ="registrarsolicitao">Solicitar Doadores</string>
   	<string name="postoHemocentro">Postos de doação</string>
   	<string name="idade">Idade </string>
   	<string name="CadastrarQuantiadDoacao">Quantidade de doações necessárias</string> 
</resources>
