<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginScrollView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

     <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="fill_parent" >

		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_alignParentBottom="true"
		    android:padding="10dp" >
		
		    <TextView
		        android:id="@+id/mensagemLogin"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_centerHorizontal="true"
		        android:text="@string/mensagemLogin"
		        android:textSize="18sp"
		        android:textStyle="bold" />
		
		    <TextView
		        android:id="@+id/loginTV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/mensagemLogin"
		        android:layout_marginTop="22dp"
		        android:text="@string/login" />
		
		    <EditText
		        android:id="@+id/loginET"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/loginTV"
		        android:layout_marginTop="12dp"
		        android:ems="10" >
		
		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/senhaET"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/senhaTV"
		        android:layout_marginTop="12dp"
		        android:ems="10" >
		    </EditText>
		
		    <TextView
		        android:id="@+id/senhaTV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/loginET"
		        android:layout_below="@+id/loginET"
		        android:layout_marginTop="12dp"
		        android:text="@string/senha" />
		
		    <Button
		        android:id="@+id/loginBT"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/senhaET"
		        android:layout_marginTop="18dp"
		        android:text="@string/entrar" />
		
		    <RelativeLayout
		        android:id="@+id/cadastroLayout"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/loginBT"
		        android:layout_centerHorizontal="true" 
		        android:layout_marginTop="12dp">
		        
		        <TextView
			        android:id="@+id/cadastroTV"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/cadastro"
			        android:textAppearance="?android:attr/textAppearanceSmall" 
			        android:textSize="13dp"/>
		        
		        <TextView
			        android:id="@+id/cadastroLinkTV"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_toRightOf="@+id/cadastroTV"
			        android:text="@string/cadastroLink"
			        android:textAppearance="?android:attr/textAppearanceSmall"
			        android:textSize="13dp"
			        android:layout_marginLeft="3dp"
			        android:textColor="#0B7A96"/>
		        
		    </RelativeLayout>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>