<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/AlterarScroll"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

     <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" >
    
		<RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="fill_parent"
		    android:padding="10dp"
		    android:gravity="bottom">
		
		    <TextView
		        android:id="@+id/AlterarDadosTitulo"
		        android:gravity="center"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentTop="true"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:layout_marginBottom="15dp"
		        android:text="@string/configuracao" />
		
		    <TextView
		        android:id="@+id/AlterarDadosNomeTV"
		        android:textSize="16sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/AlterarDadosTitulo"
		        android:text="@string/nome" />
		
		    <EditText
		        android:id="@+id/AlterarDadosNome"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@id/AlterarDadosNomeTV"
		        android:inputType="textPersonName"
		        android:layout_marginTop="6dp"
		        android:layout_marginBottom="10dp"
		        />
		
		    <TextView
		        android:id="@+id/AlterarDadosEmailTV"
		        android:textSize="16sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/AlterarDadosNome"
		        android:text="@string/email" />
		
		    <EditText
		        android:id="@+id/AlterarDadosEmail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@id/AlterarDadosEmailTV"
		        android:inputType="textEmailAddress"
		        android:layout_marginTop="6dp"
		        android:layout_marginBottom="10dp"/>
		    
		    <TextView
		        android:id="@+id/AlterarSenhaTV"
		        android:textSize="16sp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@id/AlterarDadosEmail"
		        android:text="@string/senha" />
		    
		    <EditText
		        android:id="@+id/AlterarSenha"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentRight="true"
		        android:layout_below="@+id/AlterarSenhaTV"
		        android:ems="10"
		        android:inputType="textPassword"
		        android:padding="8dp"
		        android:textSize="16sp" 
		        android:layout_marginTop="6dp"
		        android:layout_marginBottom="10dp"/>
		
		    <Spinner
		        android:id="@+id/AlterarDadosTipo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignRight="@+id/AlterarDadosEmail"
		        android:layout_below="@+id/AlterarSenha"
		        android:layout_toRightOf="@+id/AlterarDadosNascimentoTV"
		        android:entries="@array/tipos_Sanguineos" />
		
		    <EditText
		        android:id="@+id/AlterarDadosNascimento"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/AlterarDadosTipo"
		        android:layout_below="@+id/AlterarDadosTipo"
		        android:ems="10"
		        android:inputType="date"
		        android:padding="8dp"
		        android:textSize="16sp" />
		
		    <TextView
		        android:id="@+id/AlterarDadosNascimentoTV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/AlterarDadosTipoTV"
		        android:layout_below="@+id/AlterarDadosTipo"
		        android:text="@string/data_nascimento"
		        android:layout_marginTop="8dp"
		        android:layout_marginRight="10dp"/>
		
		    <TextView
		        android:id="@+id/AlterarDadosTipoTV"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/AlterarSenha"
		        android:layout_alignTop="@+id/AlterarDadosTipo"
		        android:text="@string/tipo_sanguineo"
		        android:layout_marginTop="10dp"/>
		
		    <CheckBox
		        android:id="@+id/AlterarDadosPush"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/AlterarDadosNascimento"
		        android:checked="true"
		        android:text="@string/notificacoes_push"
		        android:textSize="15sp" 
		        android:layout_marginTop="20dp"/>
		
		    <CheckBox
		        android:id="@+id/AlterarDadosEmailNot"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignLeft="@+id/AlterarDadosPush"
		        android:layout_below="@+id/AlterarDadosPush"
		        android:checked="true"
		        android:text="@string/notificacoes_email"
		        android:textSize="15sp" />
		    
		    <RelativeLayout
		        android:id="@+id/InnerRelativeLayot"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_below="@+id/AlterarDadosEmailNot"
		        android:gravity="bottom"
		        android:orientation="horizontal"
		        android:layout_marginTop="40sp">
		
			   	<Button
			   	    android:id="@+id/AlterarDadosSalvar"
			   	    android:layout_width="wrap_content"
			   	    android:layout_height="wrap_content"
			   	    android:layout_alignParentBottom="true"
			   	    android:layout_alignParentLeft="true"
			   	    android:layout_alignParentRight="true"
			   	    android:text="@string/salvar" />
		    </RelativeLayout>
		</RelativeLayout>
	</LinearLayout>
</ScrollView>
