<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="fill_parent" >
           
           <RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="fill_parent"
			    android:padding="10dp"
			    android:layout_alignParentBottom="true"
			    android:gravity="bottom">
			    
                <TextView
			        android:id="@+id/PacienteSolicitacao"
			        android:gravity="center"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignParentRight="true"
			        android:layout_alignParentTop="true"
			        android:textSize="18sp"
			        android:textStyle="bold"
			        android:layout_marginBottom="15dp"
			        android:text="@string/registrarsolicitao" />
                
	                		
			    <TextView
			        android:id="@+id/NomePacienteSolicitacao"
			        android:textSize="16sp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_below="@id/PacienteSolicitacao"
			        android:text="@string/nome" />
			    
			     <EditText
			        android:id="@+id/NomePacienteSolicitacaoTv"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignParentRight="true"
			        android:layout_below="@id/NomePacienteSolicitacao"
			        android:inputType="textPersonName"
			        android:layout_marginTop="6dp"
			        android:layout_marginBottom="10dp" 
			        >
			         	<requestFocus/>
			     </EditText>
			     
			   	<TextView
			        android:id="@+id/solicitacaoidIdadeTv"
			        android:textSize="16sp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_below="@id/NomePacienteSolicitacaoTv"
			        android:text="@string/idade" />
			
		    	<EditText
			        android:id="@+id/solicitacaoidIdade"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignParentRight="true"
			        android:layout_below="@id/solicitacaoidIdadeTv"
			        android:inputType="number"
			        android:layout_marginTop="6dp"
			        android:layout_marginBottom="10dp"/>
		    	
		  		<TextView
			        android:id="@+id/solicitacaoQuantidadeDoacaoTv"
			        android:textSize="16sp"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_below="@+id/solicitacaoidIdade"
			        android:text="@string/CadastrarQuantiadDoacao" />
		  		
		  		
		  		
		  		<Spinner
			        android:id="@+id/solicitacaoQuantidadeDoacao"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignRight="@+id/solicitacaoidIdade"
			        android:layout_below="@+id/solicitacaoQuantidadeDoacaoTv"
			        android:entries="@array/quant_doaco" />
			     
		  		
		    	
		    	
		    	<Spinner
			        android:id="@+id/solicitacaoDadosTipo"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignRight="@+id/solicitacaoidIdade"
			        android:layout_below="@+id/solicitacaoQuantidadeDoacao"
			        android:entries="@array/tipos_Sanguineos" />
		    	
		    	<Spinner
			        android:id="@+id/solicitacaoDadosHemo"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignLeft="@+id/solicitacaoDadosTipo"
			        android:layout_below="@+id/solicitacaoDadosTipo"
			        android:entries="@array/tipos_Sanguineos" />
		    	
		    	<TextView
			        android:id="@+id/SolicitacaoDadosHemoTV"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/solicitacaoQuantidadeDoacao"
			        android:text="@string/tipo_sanguineo"
			        android:layout_marginTop="8dp"
			        android:layout_marginRight="10dp"/>
			
		   		 <TextView
			        android:id="@+id/SolicitacaoPostoHemocentro"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignLeft="@+id/SolicitacaoDadosHemoTV"
			     	android:layout_below="@+id/SolicitacaoDadosHemoTV"
			        android:text="@string/postoHemocentro"
			        android:layout_marginTop="10dp"/>
		   		 
		   		<RelativeLayout
		   		    
			   		android:id="@+id/InnerRelativeLayot"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignParentBottom="true"
			        android:layout_below="@+id/SolicitacaoPostoHemocentro"
			        android:gravity="bottom"
			        android:orientation="horizontal"
			        android:layout_marginTop="40sp">
			
					   	
		 	 <Button
			        android:id="@+id/SolicitacaoSalvar"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignParentLeft="true"
			        android:layout_alignParentRight="true"
			        android:layout_below="@dimen/activity_horizontal_margin"
			        android:layout_marginTop="12dp"
			        android:text="@string/entrar" />
			        
			

		   			   		    
		   		</RelativeLayout>
				
			        

            
		    
		    </RelativeLayout>
           
       </LinearLayout>
    

</ScrollView>
